feat: updating CV link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="https://www.linkedin.com/in/guilherme-sanches-magdalena-298950263/" target="_blank">
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
-                <a href="https://1drv.ms/b/c/2f39a13550337f77/EYJmhY2iS-dGrQ91fRUMN2gB8az36QvclLor2VL77Zht5w?e=OBYIbN"
+                <a href="https://1drv.ms/b/c/2f39a13550337f77/EXD3qO6Qu9dBui2n1iUxBCEB1vVDwp6ycF1K2ZMLR-sUAQ?e=fDUK4N"
                     target="_blank">
                     <i class="fa-regular fa-file-lines"></i>
                 </a>
