--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="skills-items" id="css"><i class="fa-brands fa-css3-alt"></i><br>CSS</div>
                 <div class="skills-items" id="js"><i class="fa-brands fa-square-js"></i><br>JavaScript</div>
                 <div class="skills-items" id="node"><i class="fa-brands fa-node"></i><br>Node.js</div>
-                <div class="skills-items" id="git"><i class="fa-brands fa-react"></i><br>REACT</div>
+                <div class="skills-items" id="git"><i class="fa-brands fa-java"></i><br>Java</div>
                 <div class="skills-items" id="git"><i class="fa-brands fa-git-alt"></i><br>Git</div>
             </div>
         </section>
